* pheno:   Lua API: added et.G_ClientSound( clientnum, soundindex )
           library call
* pheno:   fixed [command] element command line length
* pheno:   fixed landmine snapshot callback for shoutcasters in follow mode
* pheno:   added shoutcaster console commands
* pheno:   added [i] shortcut for shrubbot [command] elements only
* pheno:   added shoutcaster referee commands
* pheno:   added cointoss callvote command
* pheno:   added friendly hitsounds for disguised coverts
* pheno:   fixed class change with scoped weapon bug (prevents scoped sten)
* pheno:   added headshot mode (g_headshot [0|1])
* pheno:   added instagib damage (bitflag 2) to headshot mode. g_headshot is
           now a bitflag cvar.
* pheno:   added g_goombaFlags flag 32 - falling corpses won't cause damage
* pheno:   added g_shrubbotOptions bitflag cvar (see docs)
* pheno:   added death anim and medic call to playdead command
* pheno:   fixed server crash when calling shrubbot command with [i] shortcut
           at server console
* pheno:   added g_slashKill flag 8 - disable /kill when player is frozen
* pheno:   a frozen player cannot switch teams for now
* pheno:   Lua API: fixed a bug where gclient entity fields are not available
           on et_ClientConnect() callback
* pheno:   fixed broken FF voting
* pheno:   Lua API: load API from external library
* pheno:   fixed !rename if player has reached max name changes
* pheno:   added support for ETPro's delete mapscript command
* pheno:   fixed delete mapscript command causes server crashes
* pheno:   added g_ettvFlags bitflag cvar (see docs)
* pheno:   Lua API: added redeye's et.ClientNumberFromString() library call
* pheno:   reworked inactivity code and renamed g_shrubbotOptions bitflag
           cvar to g_inactivityOptions (see docs)
* pheno:   firstblood message - added configurable message and position
* pheno:   added lastblood message
* pheno:   fixed g_teamDamageRestriction won't kick players bug